fixing tests, and got stuff to pass
Co-Authored-By: Jake Volpe <62768837+javolpe@users.noreply.github.com>

--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user.yml
@@ -25,14 +25,14 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 3355ce29-6726-4fe1-b2d2-38a17791a1e6
+      - '0618ef04-3d95-4a32-bde9-e7bf6ccbf68d'
       X-Runtime:
-      - '0.003726'
+      - '0.002662'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"1","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
         painter man"}}}'
-  recorded_at: Wed, 21 Apr 2021 22:09:48 GMT
+  recorded_at: Wed, 21 Apr 2021 23:06:28 GMT
 recorded_with: VCR 6.0.0
